# NumberSystemFloat

./: README.md
number_system_float/: pyproject.toml
number_system_float/src/number_system_float/: Binary.py  Hexadecimal.py  Octal.py
number_system_float/src/number_system_float.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
number_system_float/tests/: BinaryTest1.py  BinaryTest2.py  HexadecimalTest1.py  HexadecimalTest2.py  OctalTest1.py  OctalTest2.py
