[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "number_system_float"
version = "0.10.0"
authors = [
    { name = "William Brady Call", email = "wbradycall@gmail.com" }
]
requires-python = ">=3.8"
description = "A project for floating-point numbers in the binary, octal, and hexadecimal systems."
dependencies = []
keywords = ["binary", "octal", "hexidecimal", "float", "number"]

[project.urls]
Homepage = "https://github.com/wbradycall/NumberSystemFloat"